k8s/ingress/dev.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: akvo
  namespace: default
spec:
  tls:
  - hosts:
    - "*.akvotest.org"
    - "*.akvoflow.org"
    - "api.akvotest.org"
    - "kc.akvotest.org"
    secretName: tls
  rules:
    - host: "api.akvotest.org"
      http:
        paths:
        - backend:
            serviceName: flow-api
            servicePort: 80
    - host: "*.akvotest.org"
      http:
        paths:
        - backend:
            serviceName: lumen-blue-green-gateway
            servicePort: 80
    - host: "*.akvoflow.org"
      http:
        paths:
        - backend:
            serviceName: akvo-flow-services
            servicePort: 3000
    - host: "kc.akvotest.org"
      http:
        paths:
        - backend:
            serviceName: keycloak
            servicePort: 80
