k8s/ingress/prod.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: akvo
  namespace: default
spec:
  tls:
  - hosts:
    - "*.akvo.org"
    - "*.akvolumen.org"
    - "*.akvoapp.org"
    secretName: tls
  rules:
    - host: "rsr.akvo.org"
      http:
        paths:
        - backend:
            serviceName: rsr
            servicePort: 80
    - host: "*.akvoapp.org"
      http:
        paths:
        - backend:
            serviceName: rsr
            servicePort: 80
    - host: "flow-services.akvo.org"
      http:
        paths:
        - backend:
            serviceName: akvo-flow-services
            servicePort: 3000
    - host: "api.akvo.org"
      http:
        paths:
        - backend:
            serviceName: flow-api
            servicePort: 80
    - host: "dark-api.akvo.org"
      http:
        paths:
        - backend:
            serviceName: flow-api
            servicePort: 80
    - host: "api-auth0.akvo.org"
      http:
        paths:
        - backend:
            serviceName: flow-api-auth0
            servicePort: 80
    - host: "login.akvo.org"
      http:
        paths:
        - backend:
            serviceName: keycloak
            servicePort: 80
    - host: "dark-login.akvo.org"
      http:
        paths:
        - backend:
            serviceName: keycloak
            servicePort: 80
    - host: "reportserver.akvo.org"
      http:
        paths:
        - backend:
            serviceName: reportserver
            servicePort: 8080
    - host: "authz.akvo.org"
      http:
        paths:
          - backend:
              serviceName: akvo-authz
              servicePort: 80
    - host: "unilog-k8s.akvo.org"
      http:
        paths:
        - backend:
            serviceName: akvo-unilog
            servicePort: 3030
    - host: "unilog.akvo.org"
      http:
        paths:
        - backend:
            serviceName: akvo-unilog
            servicePort: 3030
    - host: "metrics.akvo.org"
      http:
        paths:
          - backend:
              serviceName: grafana
              servicePort: 80
    - host: "*.akvolumen.org"
      http:
        paths:
        - backend:
            serviceName: lumen-blue-green-gateway
            servicePort: 80
