k8s/ingress/test.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: akvo
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - "*.akvotest.org"
    - "*.akvoflow.org"
    - "*.portals.akvotest.org"
    - "rsr.test.akvo.org"
    - "*.akvoapp.org"
    secretName: tls-cert-manager
  rules:
    - host: "rsr.test.akvo.org"
      http:
        paths:
        - backend:
            serviceName: rsr
            servicePort: 80
    - host: "*.akvoapp.org"
      http:
        paths:
        - backend:
            serviceName: rsr
            servicePort: 80
    - host: "flow-services.akvotest.org"
      http:
        paths:
        - backend:
            serviceName: akvo-flow-services
            servicePort: 8082
    - host: "api.akvotest.org"
      http:
        paths:
        - backend:
            serviceName: flow-api
            servicePort: 80
    - host: "api-auth0.akvotest.org"
      http:
        paths:
        - backend:
            serviceName: flow-api-auth0
            servicePort: 80
    - host: "authz.akvotest.org"
      http:
        paths:
        - backend:
            serviceName: akvo-authz
            servicePort: 80
    - host: "kc.akvotest.org"
      http:
        paths:
        - backend:
            serviceName: keycloak
            servicePort: 80
    - host: "reportserver.akvotest.org"
      http:
        paths:
        - backend:
            serviceName: reportserver
            servicePort: 8080
    - host: "unilog.akvotest.org"
      http:
        paths:
        - backend:
            serviceName: akvo-unilog
            servicePort: 3030
    - host: "tech-consultancy.akvotest.org"
      http:
        paths:
        - backend:
            serviceName: tech-consultancy-gateway
            servicePort: 80
    - host: "metrics.akvotest.org"
      http:
        paths:
        - backend:
            serviceName: grafana
            servicePort: 80
    - host: "rsr1.akvotest.org"
      http:
        paths:
        - backend:
            serviceName: rsr-demo-gateway
            servicePort: 80
    - host: "rsr2.akvotest.org"
      http:
        paths:
        - backend:
            serviceName: rsr-demo-gateway
            servicePort: 80
    - host: "rsr3.akvotest.org"
      http:
        paths:
        - backend:
            serviceName: rsr-demo-gateway
            servicePort: 80
    - host: "rsr4.akvotest.org"
      http:
        paths:
        - backend:
            serviceName: rsr-demo-gateway
            servicePort: 80
    - host: "dataportals.akvotest.org"
      http:
        paths:
        - backend:
            serviceName: data-portals
            servicePort: 80
    - host: "api.portals.akvotest.org"
      http:
        paths:
        - backend:
            serviceName: data-portals
            servicePort: 80
    - host: "mali.portals.akvotest.org"
      http:
        paths:
        - backend:
            serviceName: data-portals
            servicePort: 80
    - host: "sierra-leone.portals.akvotest.org"
      http:
        paths:
        - backend:
            serviceName: data-portals
            servicePort: 80
    - host: "exact.akvotest.org"
      http:
        paths:
        - backend:
            serviceName: akvo-exact
            servicePort: 80
    - host: "unep-gpml.akvotest.org"
      http:
        paths:
        - backend:
            serviceName: unep-gpml
            servicePort: 80
    - host: "hortinvest.akvotest.org"
      http:
        paths:
        - backend:
            serviceName: hortinvest
            servicePort: 80
    - host: "*.akvotest.org"
      http:
        paths:
        - backend:
            serviceName: lumen-blue-green-gateway
            servicePort: 80
